# TRtutor

./: .gitignore  Readme.md  enhanced_dialogue_generation.py  extract_gsm.ipynb  generate_reasoner_context.py  howtorun.md  metaprompt.ipynb  prepare_sft_data.py  pyproject.toml  reasoner.ipynb  reasoner_prompt.txt  sft_talker.py  sft_talker_prompt.txt  talker_prompt.txt  tutoring_session.py
dataset_generation/: prepare_sft_data.py
finetuning/: sft_talker.py
howtorun/: finetuning_jobs.md  inference_jobs.md
inference/: conv_inference.ipynb  conversation_inference.py  llama_simulated_conversations.py  qwen_simulated_conversations.py  talker_predict.py  talker_with_dynamic_reasoner.py
llm_as_judge/: analyze_llm_results.py  llm-judge.py
outputs/: reasoner_context_tracker_after_test_runs.json
tr_data/: default_personas.json
